syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Dee-Dee-Tiger-Hacks/Backend-Server/pb";

message Token {
    string token = 1;
    google.protobuf.Timestamp expires_at = 2;
}